--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body >
  	 <h1>Le Vo Thu Uyen</h1>
- 	 <h4></h4>
+ 	 <hr>
+
+ 	 <div class="info">
+ 	 	<b>Name : </b><i> Le Vo Thu Uyen</i>
+ 	 </div>
+ 	 <div class="info">
+ 	 	<b>Date of birth : </b><i> 03/04/1998 </i>
+ 	 </div>
+ 	 <div class="info">
+ 	 	<b>PhoneNumber : </b><i> 0936363998 </i>
+ 	 </div>
+ 	 <div class="info">
+ 	 	<b>Facebook : </b><a href="">https://www.facebook.com/lang.gio.96</a>
+ 	 </div>
  	<script type="text/javascript" src="1.js"></script>
 </body>
 </html>
