--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
  	<link rel="stylesheet" href="1.css">
 </head>
 <body >
+	<div class="menu">
+		<a href="index.html">Quay lại Home</a>
+	 	<a href="gallery.html">Xem gallery </a>
+	</div>
  	 <h1>Le Vo Thu Uyen</h1>
  	 <hr>
 
