--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body data-spy="scroll" data-target=".navbar" data-offset="50">
  
-<nav class="navbar navbar-expand-md bg-dark navbar-dark navbar fixed-top ">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar fixed-top ">
   <!-- Brand -->
   <a class="navbar-brand" href="#">Le Vo Thu Uyen</a>
 
@@ -24,21 +24,25 @@
         <a class="nav-link" href="#home" >Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#about">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#blog">Blog</a>
+        <a class="nav-link" href="#about">My Resume</a>
       </li>
+      
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Dropdown link
+        Blog
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="#">Sharing</a>
+        <a class="dropdown-item" href="#">Learning</a>
+        <a class="dropdown-item" href="#">Working</a>
       </div>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
     </ul>
   </div>
 </nav>	<div id="demo" class="carousel slide" data-ride="carousel">
