--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       <meta charset="utf-8">
       <title>Navbar Example</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-      <link rel="stylesheet" href="1.css">
+      <link rel="stylesheet" type="text/css" href="1.css">
    </head>
    <body data-spy="scroll" data-target=".navbar" data-offset="50">
  
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar fixed-top ">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark navbar fixed-top ">
   <!-- Brand -->
   <a class="navbar-brand" href="#">Le Vo Thu Uyen</a>
 
@@ -21,28 +21,28 @@
   <div class="collapse navbar-collapse " id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home" >Home</a>
+        <a class="nav-link" href="index.html" >Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#about">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">My Resume</a>
+        <a class="nav-link" href="#resume">My Resume</a>
       </li>
-      
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Contact</a>
+      </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Blog
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Sharing</a>
-        <a class="dropdown-item" href="#">Learning</a>
-        <a class="dropdown-item" href="#">Working</a>
+        <a class="dropdown-item" href="sharing.html">Sharing</a>
+        <a class="dropdown-item" href="learning.html">Learning</a>
+        <a class="dropdown-item" href="working.html">Working</a>
       </div>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
-      </li>
+    
     </ul>
   </div>
 </nav>	<div id="demo" class="carousel slide" data-ride="carousel">
@@ -87,6 +87,22 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
+		<div id="about" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
+  <h1>Section 1</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="resume" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
+  <h1>Section 2</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="contact" class="container-fluid bg-danger" style="padding-top:70px;padding-bottom:70px">
+  <h1>Section 3</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+
  
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> 
