update sharing, learning, working

--- a/working.html
+++ b/working.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="index.html">Le Vo Thu Uyen</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -24,10 +23,10 @@
         <a class="nav-link" href="#">Sharing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Learning</a>
+        <a class="nav-link" href="learning.html">Learning</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Working</a>
+        <a class="nav-link" href="working.html">Working</a>
       </li>    
     </ul>
   </div>  
@@ -35,29 +34,7 @@
 
 <div class="container" style="margin-top:30px">
   <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
-    </div>
+    
     <div class="col-sm-8">
       <h2>TITLE HEADING</h2>
       <h5>Title description, Dec 7, 2017</h5>
@@ -70,6 +47,39 @@
       <div class="fakeimg">Fake Image</div>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+    <div class="col-sm-4">
+      <h2>About Me</h2>
+      <h5>Photo of me:</h5>
+      <div class="fakeimg">Fake Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <h3>Recent Post</h3>
+      <p>Lorem ipsum dolor sit ame.</p>
+      <ul class="nav nav-pills flex-column">
+        <li class="nav-item recentpost">
+          <img src="Picture/4.jpg" alt="">
+          <a class="nav-link text-dark" href="#">Five benefit of using chatbot</a>
+        </li>
+        <li class="nav-item recentpost">
+          <img src="Picture/4.jpg" alt="">
+          <a class="nav-link text-dark" href="#">Five benefit of using chatbot</a>
+          <hr>n
+        </li>
+		<li class="nav-item recentpost">
+          <img src="Picture/4.jpg" alt="">
+          <a class="nav-link text-dark" href="#">Five benefit of using chatbot</a>
+        </li>
+        <li class="nav-item recentpost">
+          <img src="Picture/4.jpg" alt="">
+          <a class="nav-link text-dark" href="#">Five benefit of using chatbot</a>
+        </li>
+		<li class="nav-item recentpost">
+          <img src="Picture/4.jpg" alt="">
+          <a class="nav-link text-dark" href="#">Five benefit of using chatbot</a>
+        </li>
+
+      </ul>
+      <hr class="d-sm-none">
     </div>
   </div>
 </div>
