--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body data-spy="scroll" data-target=".navbar" data-offset="50">
  
-<nav class="navbar navbar-expand-md bg-dark navbar-dark navbar fixed-top ">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar fixed-top ">
   <!-- Brand -->
   <a class="navbar-brand" href="#">Le Vo Thu Uyen</a>
 
